Fixed line spacing control

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -153,7 +153,7 @@ div.editorRoot {
 
 .editorContainer section {
   font-size:12pt;
-  line-height:2em;
+  
   font-family:Arial, Helvetica, sans-serif;
   text-align:justify;
 }
